--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- custom css  -->
     <link rel="stylesheet" href="./assets/styles/style.css">
 
+    <!-- responsive css -->
+    <link rel="stylesheet" href="./assets/styles/responsive.css">
+
     <!-- fontawesome icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -31,13 +34,17 @@
                 <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
+            <div class="menu">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </nav>
 
         <div class="hero">
             <div class="hero-content">
                 <h1>Start your Journey as
                     Influencer</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
                 <button>Preebook now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
 
