--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <!-- header section  -->
     <header>
+
+        <!-- navigation section -->
         <nav>
             <div class="logo">
                 <h5>Influencer products</h5>
@@ -39,11 +41,12 @@
             </div>
         </nav>
 
+        <!-- hero section -->
         <div class="hero">
             <div class="hero-content">
                 <h1>Start your Journey as
                     Influencer</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
                 <button>Preebook now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
@@ -53,6 +56,40 @@
             </div>
         </div>
     </header>
+
+    <main>
+
+        <!-- sponsor section -->
+        <section class="sponsor">
+            <img src="./assets/logos/Alibaba.svg" alt="">
+            <img src="./assets/logos/Amazon.svg" alt="">
+            <img src="./assets/logos/Daraz.pk Logo.svg" alt="">
+            <img src="./assets/logos/Ebay.svg" alt="">
+            <img src="./assets/logos/Rakuten.svg" alt="">
+            <img src="./assets/logos/Walmart.svg" alt="">
+            <img src="./assets/logos/Target.svg" alt="">
+        </section>
+
+        <!-- product section -->
+        <section class="product-containaer">
+            <h4>Popular Collection</h4>
+            <div class="product-item">
+                <img src="./assets/images/tripod.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <div class="star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.99</span>
+                </div>
+                <p>Wordwide shifting available
+Buyers protection possible!</p>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
