product section responsive and design compleate

--- a/index.html
+++ b/index.html
@@ -71,23 +71,148 @@
         </section>
 
         <!-- product section -->
-        <section class="product-containaer">
+        <section class="product-container">
             <h4>Popular Collection</h4>
-            <div class="product-item">
-                <img src="./assets/images/tripod.png" alt="">
-                <h4>Flex Tripod</h4>
-                <h5>$50.48</h5>
-                <div class="star">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                    <span>4.99</span>
+            <div class="products">
+                <div class="product-item">
+                    <img src="./assets/images/tripod.png" alt="">
+                    <h4>Flex Tripod</h4>
+                    <h5>$50.48</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
                 </div>
-                <p>Wordwide shifting available
-Buyers protection possible!</p>
+                <div class="product-item">
+                    <img src="./assets/images/mic.png" alt="">
+                    <h4>microphone</h4>
+                    <h5>$129.25</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-item">
+                    <img src="./assets/images/airpod.png" alt="">
+                    <h4>Airbuds</h4>
+                    <h5>$100.00</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-item">
+                    <img src="./assets/images/drone.png" alt="">
+                    <h4>Drone</h4>
+                    <h5>$980.25</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-item">
+                    <img src="./assets/images/lights.png" alt="">
+                    <h4>Light Setup</h4>
+                    <h5>$1200.00</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-item">
+                    <img src="./assets/images/setup.png" alt="">
+                    <h4>Photoshoot set</h4>
+                    <h5>$820.40</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-item">
+                    <img src="./assets/images/camera.png" alt="">
+                    <h4>Vlogging Camera</h4>
+                    <h5>$1800.80</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-item">
+                    <img src="./assets/images/single-light.png" alt="">
+                    <h4>Green Screen</h4>
+                    <h5>$25.48</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="product-item">
+                    <img src="./assets/images/action.png" alt="">
+                    <h4>Action Camera</h4>
+                    <h5>$380.00</h5>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
             </div>
+            <div class="right">
+                    <p>see more <i class="fa-solid fa-arrow-right"></i></p>
+                </div>
         </section>
     </main>
 </body>
