fully compleate this website

--- a/index.html
+++ b/index.html
@@ -214,7 +214,32 @@
                     <p>see more <i class="fa-solid fa-arrow-right"></i></p>
                 </div>
         </section>
+
+        <!-- Feature section -->
+         <section class="feature-container">
+            <div class="feature-image">
+                <img src="./assets/images/gear.png" alt="">
+            </div>
+            <div class="feature-content">
+                <h2>Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button>Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+         </section>
     </main>
+
+    <!-- footer section  -->
+    <footer>
+        <h3>Influencer products</h3>
+        <p>Copyright &copy 2025 Influencer Product</p>
+        <p>All Right reserved</p>
+        <div class="social">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-dribbble"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
+    </footer>
 </body>
 
 </html>
